@@ -1,3 +1,7 @@
+2011-01-27 Malignant Manor <malignantmanor@users.sourceforge.net>
+	* gamedat, gumps/Newfile_gump.cc: Dev games now use exult??dev.sav
+		instead of exult??si.sav for saved game names.
+
 2011-01-25 Malignant Manor <malignantmanor@users.sourceforge.net>
 	* gumps/GameplayOptions_gump.cc, gumps/MiscOptions_gump.*,
 		gumps/VideoOptions_gump.*: Make code more consistent with
